# rustman

./: .gitignore  Cargo.toml
examples/environments/: dev.yaml  prod.yaml  staging.yaml
examples/requests/: auth-login.yaml  create-user.yaml  get-users.yaml
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/environment/: mod.rs  variables.rs
src/request/: executor.rs  mod.rs  models.rs  parser.rs  validator.rs
src/response/: formatter.rs  mod.rs
src/utils/: file_utils.rs  mod.rs  parsing_utils.rs
tests/: integration_tests.rs
