[package]
name = "rustman"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for HTTP requests inspired by Postman"
authors = ["Wouter van Krugten <wouterschiedam98@gmail.com>"]
license = "MIT"

[[bin]]
name = "rpcli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Terminal output
colored = "2.0"
indicatif = "0.17"

# File handling
walkdir = "2.3"
glob = "0.3"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Template engine for variables
handlebars = "4.3"

regex = "1"

[dev-dependencies]
tempfile = "3.0"

